--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,8 @@
 include input_reader/*
 include input_reader/docs/*
 include input_reader/tests/*
+include ez_setup.py
+include LICENCE
 include README.md
 include MANIFEST.in
 include setup.py
