Point setup.cfg to correct docs folders

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [build_sphinx]
-source-dir = doc/source
-build-dir  = doc/build
+source-dir = input_reader/docs/source
+build-dir  = input_reader/docs/build
 all_files  = 1
