--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,7 @@ include input_reader/*
 include input_reader/docs/*
 include input_reader/tests/*
 include distribute_setup.py
-include LICENCE
-include README.md
+include LICENSE
+include README.rst
 include MANIFEST.in
 include setup.py
