--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,7 @@
 [build_sphinx]
-source-dir = input_reader/docs/source
-build-dir  = input_reader/docs/build
+source-dir = docs/source
+build-dir  = docs/build
 all_files  = 1
+
+[upload_docs]
+upload-dir = docs/build/html
