Fixed docs paths in MANIFEST.in and excluded the build folder in docs

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,8 @@
 include input_reader/*
-include input_reader/docs/*
+include docs/source/*
+include docs/solar/*
+include docs/Makefile
+include docs/make.bat
 include input_reader/tests/*
 include distribute_setup.py
 include LICENSE
