--- a/setup.cfg
+++ b/setup.cfg
@@ -6,5 +6,8 @@ all_files  = 1
 [upload_docs]
 upload-dir = docs/build/html
 
-[pytest]
-norecursedirs = .git .svn .hg build dist docs
+[bdist_wheel]
+universal = 1
+
+[sdist]
+formats = zip,gztar
