Fixed copy/paste error in .travis.yml.
I had copied the configuration from the natsort package, but forgot
to change the coverage from natsort to input_reader.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
 - pip install pytest-cov
 - pip install wheel
 script:
-- python -m pytest --cov-report term-missing --cov natsort
+- python -m pytest --cov-report term-missing --cov input_reader
